1999-11-11 olicha <olivier.chapuis@free.fr>

	* FvwmWinList/FvwmWinList.c (main):
	(ProcessMessage):
	Use SetSyncMask in the place of M_LOCKONSEND for NoIconAction
	configuration command
	
1999-11-09  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
	(ProcessMessage):
	* FvwmTaskBar/ButtonArray.c (AddButton):
        Fixed mini-icons and iconified state problems with DeskOnly 
	option.

1999-11-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (DrawGrid):
	(DrawIconGrid):
	fixed previous patch
	(DrawGrid):
	fixed previous fix

	* FvwmPager/FvwmPager.c: (ParseOptions):
	* FvwmPager/x_pager.c (DrawGrid):
	(DrawIconGrid):
	new option 'NoSeparators'

1999-11-04  Hippo

	* FvwmScroll/*.c, FvwmDragWell/*.c: use fvwmlib_client_window()

1999-11-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (get_gcs):
	fixed uninitialised variable

1999-11-04  Olivier Chapuis  olivier.chapuis@free.fr

	* FvwmWinList/FvwmWinList.c (ProcessMessage):
	Fix a MoveToDesk problem.

1999-11-03  Hippo

	* FvwmIconMan/*: New config options *FvwmIconMan*Reverse

1999-11-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (set_win_iconified):
	-Wall fixes

	* FvwmDragWell/fvwmDragWell.c:
	* FvwmDragWell/xdndDragSource.c:
	* FvwmDragWell/cursorStuff.c:
	fixed tons of -Wall warnings, bugs, etc.
	added GPL notice to all FvwmDragWell source files

1999-10-31  Dan Espen  <dane@mk.telcordia.com>

	* FvwmDragWell/Makefile.am (INCLUDES): Remove /libs from top_srcdir.

1999/10/30  Bob Woodside  <proteus@pcnet.com>

	* FvwmIdent/FvwmIdent.h:
	* FvwmIdent/FvwmIdent.c:  Belated GSFR. This was overlooked in
	the original GSFR because it had the old flag values coded inline
	instead of relying on the header, so it never got any build
	errors when the flags were changed. (Bug Rept #499)

1999-10-30  Olivier Chapuis  olivier.chapuis@free.fr

	* modules/FvwmForm/FvwmRootCursor.:
	* modules/FvwmForm/FvwmRootCursor.pl: