@@ -22,7 +22,7 @@
 #include <libs/Module.h>
 
 static char const rcsid[] =
-  "$Id: fvwm.c,v 1.21 1999/10/26 15:19:54 hippo Exp $";
+  "$Id: fvwm.c,v 1.22 1999/11/12 06:53:21 olicha Exp $";
 
 static WinData *fvwm_focus_win = NULL;
 
@@ -491,20 +491,6 @@ static void ProcessMessage (Ulong type, FvwmPacketBody *body)
   int i;
 
   ConsoleDebug (FVWM, "FVWM Message type: %ld\n", type);
-
-  /* only M_ICONIFY, M_DEICONIFY need synchronous behaviour so send unlock
-   * immediately for all other messages */
-  /* would be better to have a SetSyncMask like SetMessageMask that just lists
-   * the messages that fvwm will treat as synchronous */
-  switch(type)
-  {     
-    case M_ICONIFY:
-    case M_DEICONIFY:
-      break;      
-    default:
-      SendText(Fvwm_fd, "Unlock 1", 0);
-      break;
-  }           
 
   switch(type) {
   case M_CONFIG_INFO:
