@@ -1,3 +1,10 @@
+1999-11-12 olicha <olivier.chapuis@free.fr>
+
+	* FvwmIconMan/FvwmIconMan.c (main):
+	* FvwmIconMan/fvwm.c (ProcessMessage):
+	Use SetSyncMask in the place of M_LOCKONSEND for synchronize its 
+	processing with fvwm only for M_ICONIFY and M_DEICONIFY messages
+
 1999-11-11 olicha <olivier.chapuis@free.fr>
 
 	* FvwmWinList/FvwmWinList.c (main):
